--- a/src/components/servicescard.css
+++ b/src/components/servicescard.css
@@ -12,10 +12,15 @@
 .service-card:hover{
     background-color: #41C9E2;
     cursor: pointer;
+   
 }
 .service-card h2{
     font-weight: 900;
-    color: rgba(0,0,0,.6);
+    color:#41C9E2 ;
+}
+.service-card:hover h2{
+  
+    color:#ffffff ;
 }
 .service-card .desc{
     font-weight: 500;
@@ -23,4 +28,11 @@
 .service-card .price{
     font-size: 1em;
     font-weight: 800;
+}
+.services-container h1{
+    font-weight: 900;
+}
+.price{
+    color: #FF0000;
+    
 }
