--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 }
 body{
     background:#F7EEDD ;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 
 }
 .menu-principal {
